--- a/w01/d03/starter/index.html
+++ b/w01/d03/starter/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Brook &#38 Lyn</title>
+	<title>Brook & Lyn</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	
 </head>
 <body>
-	
+	<div class="container">
+		<h1>Brook & Lyn</h1>
+		<img src="images/home-bloghero.png">
+		<img src="images/home-rings.png">
+		<h3>Our Latest Collection<h3>
+		<a href="http://google.com">May 25th, 2012</a>
+		<p>Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-avis cooperative functionalities. Holisticly extend cross-media technologies rather than cutting-edge experiences.</p>
+		<p>Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-avis cooperative functionalities. Holisticly extend cross-media technologies rather than cutting-edge experiences. <a href="http://google.com">Read More...</a></p>
+		<img class="wrap" src="images/press-nbcnewyork.gif">
+		<img class="wrap" src="images/press-huffpost.gif">
+		<img class="wrap" src="images/press-logo_lucky.gif">
+		<img class="wrap" src="images/press-marieclaire.gif">
+	<h6>Copyright 1999<h6>
+	</div>
 </body>
 </html>
