hw pushing with Matt

--- a/w02/d02/starter/index.html
+++ b/w02/d02/starter/index.html
@@ -4,13 +4,16 @@
 	<meta charset="UTF-8">
 	<title>Choose your own Adventure</title>
 
-	<!-- Link your CSS here if you want any CSS -->
+	<link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
+
+<h1>Utopia Adventure Game!</h1>
+
+
 <script src="js/main.js"></script>
 
-	<!-- Link your JavaScript here -->
 
 </body>
 </html>
