--- a/w03/d05/starter/currency_converter/currencyconverter.html
+++ b/w03/d05/starter/currency_converter/currencyconverter.html
@@ -5,5 +5,10 @@
   </head>
   <body>
     <h1>Currency Converter</h1>
+    <p><input class="user_input"></p>
+    <p class="output"></p>
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
