--- a/w02/d02/starter/index.html
+++ b/w02/d02/starter/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Choose your own Adventure</title>
+  <meta charset="UTF-8">
+  <title>Choose your own Adventure</title>
 
-	<!-- Link your CSS here if you want any CSS -->
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
-	
 
-	<!-- Link your JavaScript here -->
+<h1>Utopia Adventure Game!</h1>
+
+
+<script src="js/main.js"></script>
+
 
 </body>
 </html>
